cmake_minimum_required(VERSION 3.10)
project(chap2)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES app/Pr2-1.cpp app/Pr2-2.cpp app/Pr2-3.cpp app/Pr2-4.cpp
        app/Pr2-5.cpp app/Pr2-6.cpp app/Pr2-7.cpp app/Pr2-8 app/Pr2-9.cpp
        app/Pr2-10.cpp app/Pr2-11.cpp app/Pr2-12.cpp app/Pr2-13 app/Pr2-14.cpp
        app/Pr2-15.cpp app/Pr2-16.cpp app/Pr2-17.cpp app/Pr2-18 app/Pr2-19.cpp
        app/Pr2-20.cpp app/Pr2-21.cpp app/Pr2-22.cpp app/Pr2-23 app/Pr2-24.cpp
        app/Pr2-25.cpp app/Pr2-26.cpp app/Pr2-27.cpp app/Pr2-28 app/Pr2-29.cpp
        app/Pr2-30.cpp)
add_executable(Pr2-1.exe app/Pr2-1.cpp)
add_executable(Pr2-2.exe app/Pr2-2.cpp)
add_executable(Pr2-3.exe app/Pr2-3.cpp)
add_executable(Pr2-4.exe app/Pr2-4.cpp)
add_executable(Pr2-5.exe app/Pr2-5.cpp)
add_executable(Pr2-6.exe app/Pr2-6.cpp)
add_executable(Pr2-7.exe app/Pr2-7.cpp)
add_executable(Pr2-8.exe app/Pr2-8.cpp)
add_executable(Pr2-9.exe app/Pr2-9.cpp)
add_executable(Pr2-10.exe app/Pr2-10.cpp)
add_executable(Pr2-11.exe app/Pr2-11.cpp)
add_executable(Pr2-12.exe app/Pr2-12.cpp)
add_executable(Pr2-13.exe app/Pr2-13.cpp)
add_executable(Pr2-14.exe app/Pr2-14.cpp)
add_executable(Pr2-15.exe app/Pr2-15.cpp)
add_executable(Pr2-16.exe app/Pr2-16.cpp)
add_executable(Pr2-17.exe app/Pr2-17.cpp)
add_executable(Pr2-18.exe app/Pr2-18.cpp)
add_executable(Pr2-19.exe app/Pr2-19.cpp)
add_executable(Pr2-20.exe app/Pr2-20.cpp)
add_executable(Pr2-21.exe app/Pr2-21.cpp)
add_executable(Pr2-22.exe app/Pr2-22.cpp)
add_executable(Pr2-23.exe app/Pr2-23.cpp)
add_executable(Pr2-24.exe app/Pr2-24.cpp)
add_executable(Pr2-25.exe app/Pr2-25.cpp)
add_executable(Pr2-26.exe app/Pr2-26.cpp)
add_executable(Pr2-27.exe app/Pr2-27.cpp)
add_executable(Pr2-28.exe app/Pr2-28.cpp)
add_executable(Pr2-29.exe app/Pr2-29.cpp)
add_executable(Pr2-30.exe app/Pr2-30.cpp)
